# s3-select-rust-example

./: Cargo.toml  README.md
src/: main.rs
